// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Billing Dialog > Renders the component (Checkout window) 1`] = `
"<body>
  <div class="v-overlay-container">
    <div class="v-overlay v-overlay--active v-theme--light v-locale--is-ltr v-dialog v-dialog--scrollable" style="z-index: 2400;" aria-modal="true" role="dialog" data-v-0e9a08b3="" data-test="checkout-dialog">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <div class="v-overlay__scrim"></div>
      </transition-stub>
      <transition-stub name="dialog-bottom-transition" appear="true" persisted="true" css="true">
        <div class="v-overlay__content" style="max-width: 600px;" tabindex="-1">
          <div data-v-0e9a08b3="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface border">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!-- Content -->
            <!-- Titlebar -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-b px-4 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-avatar v-theme--light text-primary v-avatar--density-default v-avatar--rounded v-avatar--variant-tonal border border-primary border-opacity-100 mr-3" style="width: 48px; height: 48px;"><i class="mdi-credit-card mdi v-icon notranslate v-theme--light" style="font-size: 24px; height: 24px; width: 24px;" aria-hidden="true"></i>
                  <!----><span class="v-avatar__underlay"></span>
                </div>
                <div>
                  <div class="v-toolbar-title text-h6">
                    <div class="v-toolbar-title__placeholder">
                      <!---->Billing &amp; Subscription
                    </div>
                  </div>
                  <div class="text-caption text-medium-emphasis">Manage your subscription and payment details</div>
                </div>
                <div class="v-spacer"></div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="close-btn-toolbar"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header><!-- Content -->
            <div class="v-card-text pa-6">
              <div class="v-window v-theme--light">
                <div class="v-window__container">
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card-title mb-1 pt-0" align="center" data-test="title"> ShellHub Cloud Premium Subscription </div>
                      <div data-test="text" class="text-justify">
                        <p> Our hosted service helps you manage your devices, with costs based on your device count. It's perfect for easy, secure, and remote control, whatever your fleet size. </p>
                        <p>As your device number grows, our pricing adapts, guaranteeing value.</p>
                        <p>Click on next to proceed to the payment checkout.</p>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card-title pt-0 pb-4" align="center" data-test="billing-payment-details"> Payment Details </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-name">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-8" aria-hidden="false" style="">
                                    <!---->Name
                                  </label><label class="v-label v-field-label" for="input-v-8" style="">
                                    <!---->Name
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-8" aria-describedby="input-v-8-messages" class="v-field__input" value="test">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-8-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-email">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-11" aria-hidden="false" style="">
                                    <!---->E-mail
                                  </label><label class="v-label v-field-label" for="input-v-11" style="">
                                    <!---->E-mail
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-11" aria-describedby="input-v-11-messages" class="v-field__input" value="test@test.com">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-11-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-col ma-0 pa-0">
                        <h4 data-v-ec12e293="" data-test="credit-card-text"> Your credit cards </h4>
                      </div>
                      <div data-v-ec12e293="" class="v-list v-list--nav v-theme--light bg-transparent v-list--density-default v-list--one-line w-100 pa-0 pt-2 content-card" tabindex="0" role="list" data-test="payment-methods-list">
                        <div data-v-ec12e293="" class="v-col pa-0 mt-2 mb-2">
                          <div data-v-ec12e293="" class="v-card v-theme--light v-card--density-default v-card--variant-flat bg-v-theme-card">
                            <!---->
                            <div class="v-card__loader">
                              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                <!---->
                                <div class="v-progress-linear__background"></div>
                                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                  <div class="v-progress-linear__indeterminate">
                                    <div class="v-progress-linear__indeterminate long"></div>
                                    <div class="v-progress-linear__indeterminate short"></div>
                                  </div>
                                </transition-stub>
                                <!---->
                              </div>
                            </div>
                            <!---->
                            <!---->
                            <div data-v-ec12e293="" tabindex="-2" class="v-list-item v-list-item--link v-list-item--nav v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--rounded v-list-item--variant-text card" role="listitem" data-test="payment-methods-item"><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
                              <!---->
                              <div class="v-list-item__content" data-no-activator="">
                                <!---->
                                <!---->
                                <div data-v-ec12e293="" class="v-row align-center" cols="12">
                                  <div data-v-ec12e293="" class="v-col v-col-1"><i data-v-ec12e293="" class="fa:fab fa-cc-visa mdi v-icon notranslate v-theme--light" style="font-size: 1.5rem; height: 1.5rem; width: 1.5rem;" aria-hidden="true" data-test="type-icon"></i></div>
                                  <div data-v-ec12e293="" class="v-col v-col-4"><b data-v-ec12e293="">xxxxxxxxxxxx4242</b></div>
                                  <div data-v-ec12e293="" class="v-col v-col-2">3/2029</div>
                                  <div data-v-ec12e293="" class="v-col v-col-2"></div>
                                  <div data-v-ec12e293="" class="v-col v-col-3"><span data-v-ec12e293="" class="v-chip v-theme--light v-chip--density-comfortable v-chip--size-default v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-v-18"><!----><span class="v-chip__underlay"></span>
                                    <!---->
                                    <!---->
                                    <div class="v-chip__content" data-no-activator=""><b data-v-ec12e293="">default</b>
                                      <!---->
                                      <!--teleport start-->
                                      <!--teleport end-->
                                    </div>
                                    <!---->
                                    <!----></span>
                                  </div>
                                </div>
                              </div>
                              <!---->
                            </div>
                            <!---->
                            <!----><span class="v-card__underlay"></span>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-row mt-0 pt-0 pt-0" cols="12">
                        <div data-v-ec12e293="" class="v-col v-col-8 pr-0">
                          <!--v-if-->
                        </div>
                        <div data-v-ec12e293="" class="v-col v-col-4 d-flex flex-lg-column align-center justify-center pt-0"><button data-v-ec12e293="" type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" data-test="add-card-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><span class="v-btn__prepend"><i class="mdi-credit-card-plus mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span><span class="v-btn__content" data-no-activator="">Add new card</span>
                            <!---->
                            <!---->
                          </button></div>
                      </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <!--v-if-->
                        </div>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item v-window-item--active" style="">
                      <div class="v-container v-locale--is-ltr">
                        <div class="v-row">
                          <div class="v-col">
                            <h2 data-test="title"> Payment Method: </h2>
                          </div>
                        </div>
                        <div class="v-row">
                          <div class="v-col">
                            <p data-test="sub-title"> This is the payment method you have selected for your ShellHub Cloud subscription </p>
                          </div>
                        </div>
                        <div class="v-col">
                          <div class="v-card v-theme--light v-card--density-default v-card--variant-flat bg-v-theme-card" align="center" data-test="card">
                            <!---->
                            <div class="v-card__loader">
                              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                <!---->
                                <div class="v-progress-linear__background"></div>
                                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                  <div class="v-progress-linear__indeterminate">
                                    <div class="v-progress-linear__indeterminate long"></div>
                                    <div class="v-progress-linear__indeterminate short"></div>
                                  </div>
                                </transition-stub>
                                <!---->
                              </div>
                            </div>
                            <!---->
                            <!---->
                            <div class="v-list-item v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text pl-0 pr-0">
                              <!----><span class="v-list-item__underlay"></span>
                              <!---->
                              <div class="v-list-item__content" data-no-activator="">
                                <!---->
                                <!---->
                                <div class="v-row align-center pa-0 pa-2" cols="12">
                                  <div class="v-col v-col-1"><i class="fa:fab fa-cc-visa mdi v-icon notranslate v-theme--light" style="font-size: 1.5rem; height: 1.5rem; width: 1.5rem;" aria-hidden="true" data-test="type-icon"></i></div>
                                  <div class="v-col v-col-3"><b>xxxxxxxxxxxx4242</b></div>
                                  <div class="v-col v-col-3">3/2029</div>
                                  <div class="v-col v-col-2"></div>
                                  <div class="v-col v-col-3"><span class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-v-21"><!----><span class="v-chip__underlay"></span>
                                    <!---->
                                    <!---->
                                    <div class="v-chip__content" data-no-activator=""><b>default</b>
                                      <!---->
                                      <!--teleport start-->
                                      <!--teleport end-->
                                    </div>
                                    <!---->
                                    <!----></span>
                                  </div>
                                </div>
                              </div>
                              <!---->
                            </div>
                            <!---->
                            <!----><span class="v-card__underlay"></span>
                          </div>
                        </div>
                        <div class="v-spacer mb-5"></div>
                        <div class="v-row">
                          <div class="v-col">
                            <h3 data-test="additional-information"> Additional Information: </h3>
                            <div class="v-spacer mb-2"></div>
                            <ul data-test="additional-information-list" class="text-justify">
                              <li>
                                <p>Your selected payment method will be charged automatically on a monthly basis</p>
                              </li>
                              <li>
                                <p>You can manage your payment methods, invoices and subscription details in the <strong>Billing Portal.</strong></p>
                              </li>
                              <li>
                                <p>Invoices will be generated and available for download at the beginning of each billing cycle.</p>
                              </li>
                              <li>
                                <p>You have the option to cancel your subscription at any time through the <strong>Billing Portal.</strong></p>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <!--v-if-->
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <!---->
                </div>
                <!---->
              </div>
            </div><!-- Footer -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-t px-6 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-spacer"></div>
                <!--v-if-->
                <!--v-if--><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="checkout-back-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Back </span>
                  <!---->
                  <!---->
                </button><button type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="checkout-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Subscribe now </span>
                  <!---->
                  <!---->
                </button>
                <!--v-if-->
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="v-overlay v-overlay--absolute v-theme--light v-locale--is-ltr v-tooltip" style="z-index: 2000;" id="v-tooltip-v-18" role="tooltip" data-v-ec12e293="">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade-transition" appear="true" persisted="true" css="true" target="[object HTMLSpanElement]">
        <div class="v-overlay__content" style="min-width: 0px; display: none;"> This payment method will be used on your subscription </div>
      </transition-stub>
    </div>
    <div class="v-overlay v-overlay--absolute v-theme--light v-locale--is-ltr v-tooltip" style="z-index: 2000;" id="v-tooltip-v-21" role="tooltip">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade-transition" appear="true" persisted="true" css="true" target="[object HTMLSpanElement]">
        <div class="v-overlay__content" style="min-width: 0px; display: none;"> This payment method will be used on your subscription </div>
      </transition-stub>
    </div>
  </div>
</body>"
`;

exports[`Billing Dialog > Renders the component (Payment Details window) 1`] = `
"<body>
  <div class="v-overlay-container">
    <div class="v-overlay v-overlay--active v-theme--light v-locale--is-ltr v-dialog v-dialog--scrollable" style="z-index: 2400;" aria-modal="true" role="dialog" data-v-0e9a08b3="" data-test="checkout-dialog">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <div class="v-overlay__scrim"></div>
      </transition-stub>
      <transition-stub name="dialog-bottom-transition" appear="true" persisted="true" css="true">
        <div class="v-overlay__content" style="max-width: 600px;" tabindex="-1">
          <div data-v-0e9a08b3="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface border">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!-- Content -->
            <!-- Titlebar -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-b px-4 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-avatar v-theme--light text-primary v-avatar--density-default v-avatar--rounded v-avatar--variant-tonal border border-primary border-opacity-100 mr-3" style="width: 48px; height: 48px;"><i class="mdi-credit-card mdi v-icon notranslate v-theme--light" style="font-size: 24px; height: 24px; width: 24px;" aria-hidden="true"></i>
                  <!----><span class="v-avatar__underlay"></span>
                </div>
                <div>
                  <div class="v-toolbar-title text-h6">
                    <div class="v-toolbar-title__placeholder">
                      <!---->Billing &amp; Subscription
                    </div>
                  </div>
                  <div class="text-caption text-medium-emphasis">Manage your subscription and payment details</div>
                </div>
                <div class="v-spacer"></div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="close-btn-toolbar"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header><!-- Content -->
            <div class="v-card-text pa-6">
              <div class="v-window v-theme--light">
                <div class="v-window__container">
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card-title mb-1 pt-0" align="center" data-test="title"> ShellHub Cloud Premium Subscription </div>
                      <div data-test="text" class="text-justify">
                        <p> Our hosted service helps you manage your devices, with costs based on your device count. It's perfect for easy, secure, and remote control, whatever your fleet size. </p>
                        <p>As your device number grows, our pricing adapts, guaranteeing value.</p>
                        <p>Click on next to proceed to the payment checkout.</p>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item v-window-item--active" style="">
                      <div class="v-card-title pt-0 pb-4" align="center" data-test="billing-payment-details"> Payment Details </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-name">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-8" aria-hidden="false">
                                    <!---->Name
                                  </label><label class="v-label v-field-label" for="input-v-8">
                                    <!---->Name
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-8" aria-describedby="input-v-8-messages" class="v-field__input" value="test">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-8-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-email">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-11" aria-hidden="false">
                                    <!---->E-mail
                                  </label><label class="v-label v-field-label" for="input-v-11">
                                    <!---->E-mail
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-11" aria-describedby="input-v-11-messages" class="v-field__input" value="test@test.com">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-11-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-col ma-0 pa-0">
                        <h4 data-v-ec12e293="" data-test="credit-card-text"> Your credit cards </h4>
                      </div>
                      <div data-v-ec12e293="" class="v-list v-list--nav v-theme--light bg-transparent v-list--density-default v-list--one-line w-100 pa-0 pt-2 content-card" tabindex="0" role="list" data-test="payment-methods-list">
                        <div data-v-ec12e293="" class="v-col pa-0 mt-2 mb-2">
                          <div data-v-ec12e293="" class="v-card v-theme--light v-card--density-default v-card--variant-flat bg-v-theme-card">
                            <!---->
                            <div class="v-card__loader">
                              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                <!---->
                                <div class="v-progress-linear__background"></div>
                                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                  <div class="v-progress-linear__indeterminate">
                                    <div class="v-progress-linear__indeterminate long"></div>
                                    <div class="v-progress-linear__indeterminate short"></div>
                                  </div>
                                </transition-stub>
                                <!---->
                              </div>
                            </div>
                            <!---->
                            <!---->
                            <div data-v-ec12e293="" tabindex="-2" class="v-list-item v-list-item--link v-list-item--nav v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--rounded v-list-item--variant-text card" role="listitem" data-test="payment-methods-item"><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
                              <!---->
                              <div class="v-list-item__content" data-no-activator="">
                                <!---->
                                <!---->
                                <div data-v-ec12e293="" class="v-row align-center" cols="12">
                                  <div data-v-ec12e293="" class="v-col v-col-1"><i data-v-ec12e293="" class="fa:fab fa-cc-visa mdi v-icon notranslate v-theme--light" style="font-size: 1.5rem; height: 1.5rem; width: 1.5rem;" aria-hidden="true" data-test="type-icon"></i></div>
                                  <div data-v-ec12e293="" class="v-col v-col-4"><b data-v-ec12e293="">xxxxxxxxxxxx4242</b></div>
                                  <div data-v-ec12e293="" class="v-col v-col-2">3/2029</div>
                                  <div data-v-ec12e293="" class="v-col v-col-2"></div>
                                  <div data-v-ec12e293="" class="v-col v-col-3"><span data-v-ec12e293="" class="v-chip v-theme--light v-chip--density-comfortable v-chip--size-default v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-v-18"><!----><span class="v-chip__underlay"></span>
                                    <!---->
                                    <!---->
                                    <div class="v-chip__content" data-no-activator=""><b data-v-ec12e293="">default</b>
                                      <!---->
                                      <!--teleport start-->
                                      <!--teleport end-->
                                    </div>
                                    <!---->
                                    <!----></span>
                                  </div>
                                </div>
                              </div>
                              <!---->
                            </div>
                            <!---->
                            <!----><span class="v-card__underlay"></span>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-row mt-0 pt-0 pt-0" cols="12">
                        <div data-v-ec12e293="" class="v-col v-col-8 pr-0">
                          <!--v-if-->
                        </div>
                        <div data-v-ec12e293="" class="v-col v-col-4 d-flex flex-lg-column align-center justify-center pt-0"><button data-v-ec12e293="" type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" data-test="add-card-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><span class="v-btn__prepend"><i class="mdi-credit-card-plus mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span><span class="v-btn__content" data-no-activator="">Add new card</span>
                            <!---->
                            <!---->
                          </button></div>
                      </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <!--v-if-->
                        </div>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <!---->
                </div>
                <!---->
              </div>
            </div><!-- Footer -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-t px-6 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-spacer"></div>
                <!--v-if--><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="payment-details-back-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Back </span>
                  <!---->
                  <!---->
                </button><button type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="payment-details-next-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Next </span>
                  <!---->
                  <!---->
                </button>
                <!--v-if-->
                <!--v-if-->
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="v-overlay v-overlay--absolute v-theme--light v-locale--is-ltr v-tooltip" style="z-index: 2000;" id="v-tooltip-v-18" role="tooltip" data-v-ec12e293="">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade-transition" appear="true" persisted="true" css="true" target="[object HTMLSpanElement]">
        <div class="v-overlay__content" style="min-width: 0px; display: none;"> This payment method will be used on your subscription </div>
      </transition-stub>
    </div>
  </div>
</body>"
`;

exports[`Billing Dialog > Renders the component (Success window) 1`] = `
"<body>
  <div class="v-overlay-container">
    <div class="v-overlay v-overlay--active v-theme--light v-locale--is-ltr v-dialog v-dialog--scrollable" style="z-index: 2400;" aria-modal="true" role="dialog" data-v-0e9a08b3="" data-test="checkout-dialog">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <div class="v-overlay__scrim"></div>
      </transition-stub>
      <transition-stub name="dialog-bottom-transition" appear="true" persisted="true" css="true">
        <div class="v-overlay__content" style="max-width: 600px;" tabindex="-1">
          <div data-v-0e9a08b3="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface border">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!-- Content -->
            <!-- Titlebar -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-b px-4 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-avatar v-theme--light text-primary v-avatar--density-default v-avatar--rounded v-avatar--variant-tonal border border-primary border-opacity-100 mr-3" style="width: 48px; height: 48px;"><i class="mdi-credit-card mdi v-icon notranslate v-theme--light" style="font-size: 24px; height: 24px; width: 24px;" aria-hidden="true"></i>
                  <!----><span class="v-avatar__underlay"></span>
                </div>
                <div>
                  <div class="v-toolbar-title text-h6">
                    <div class="v-toolbar-title__placeholder">
                      <!---->Billing &amp; Subscription
                    </div>
                  </div>
                  <div class="text-caption text-medium-emphasis">Manage your subscription and payment details</div>
                </div>
                <div class="v-spacer"></div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="close-btn-toolbar"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header><!-- Content -->
            <div class="v-card-text pa-6">
              <div class="v-window v-theme--light">
                <div class="v-window__container">
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card-title mb-1 pt-0" align="center" data-test="title"> ShellHub Cloud Premium Subscription </div>
                      <div data-test="text" class="text-justify">
                        <p> Our hosted service helps you manage your devices, with costs based on your device count. It's perfect for easy, secure, and remote control, whatever your fleet size. </p>
                        <p>As your device number grows, our pricing adapts, guaranteeing value.</p>
                        <p>Click on next to proceed to the payment checkout.</p>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-card-title pt-0 pb-4" align="center" data-test="billing-payment-details"> Payment Details </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-name">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-8" aria-hidden="false" style="">
                                    <!---->Name
                                  </label><label class="v-label v-field-label" for="input-v-8" style="">
                                    <!---->Name
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-8" aria-describedby="input-v-8-messages" class="v-field__input" value="test">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-8-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                        <div data-v-ec12e293="" class="v-col">
                          <div data-v-ec12e293="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-input--disabled v-text-field" data-test="customer-email">
                            <!---->
                            <div class="v-input__control">
                              <div class="v-field v-field--active v-field--center-affix v-field--disabled v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                                <div class="v-field__overlay"></div>
                                <div class="v-field__loader">
                                  <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                    <!---->
                                    <div class="v-progress-linear__background"></div>
                                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                    <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                      <div class="v-progress-linear__indeterminate">
                                        <div class="v-progress-linear__indeterminate long"></div>
                                        <div class="v-progress-linear__indeterminate short"></div>
                                      </div>
                                    </transition-stub>
                                    <!---->
                                  </div>
                                </div>
                                <!---->
                                <div class="v-field__field" data-no-activator=""><label class="v-label v-field-label v-field-label--floating" for="input-v-11" aria-hidden="false" style="">
                                    <!---->E-mail
                                  </label><label class="v-label v-field-label" for="input-v-11" style="">
                                    <!---->E-mail
                                  </label>
                                  <!----><input disabled="" size="1" type="text" id="input-v-11" aria-describedby="input-v-11-messages" class="v-field__input" value="test@test.com">
                                  <!---->
                                </div>
                                <!---->
                                <!---->
                                <div class="v-field__outline">
                                  <!---->
                                  <!---->
                                </div>
                              </div>
                            </div>
                            <!---->
                            <div id="input-v-11-messages" class="v-input__details" role="alert" aria-live="polite">
                              <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
                                <!---->
                              </transition-group-stub>
                              <!---->
                            </div>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-col ma-0 pa-0">
                        <h4 data-v-ec12e293="" data-test="credit-card-text"> Your credit cards </h4>
                      </div>
                      <div data-v-ec12e293="" class="v-list v-list--nav v-theme--light bg-transparent v-list--density-default v-list--one-line w-100 pa-0 pt-2 content-card" tabindex="0" role="list" data-test="payment-methods-list">
                        <div data-v-ec12e293="" class="v-col pa-0 mt-2 mb-2">
                          <div data-v-ec12e293="" class="v-card v-theme--light v-card--density-default v-card--variant-flat bg-v-theme-card">
                            <!---->
                            <div class="v-card__loader">
                              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                <!---->
                                <div class="v-progress-linear__background"></div>
                                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                  <div class="v-progress-linear__indeterminate">
                                    <div class="v-progress-linear__indeterminate long"></div>
                                    <div class="v-progress-linear__indeterminate short"></div>
                                  </div>
                                </transition-stub>
                                <!---->
                              </div>
                            </div>
                            <!---->
                            <!---->
                            <div data-v-ec12e293="" tabindex="-2" class="v-list-item v-list-item--link v-list-item--nav v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--rounded v-list-item--variant-text card" role="listitem" data-test="payment-methods-item"><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
                              <!---->
                              <div class="v-list-item__content" data-no-activator="">
                                <!---->
                                <!---->
                                <div data-v-ec12e293="" class="v-row align-center" cols="12">
                                  <div data-v-ec12e293="" class="v-col v-col-1"><i data-v-ec12e293="" class="fa:fab fa-cc-visa mdi v-icon notranslate v-theme--light" style="font-size: 1.5rem; height: 1.5rem; width: 1.5rem;" aria-hidden="true" data-test="type-icon"></i></div>
                                  <div data-v-ec12e293="" class="v-col v-col-4"><b data-v-ec12e293="">xxxxxxxxxxxx4242</b></div>
                                  <div data-v-ec12e293="" class="v-col v-col-2">3/2029</div>
                                  <div data-v-ec12e293="" class="v-col v-col-2"></div>
                                  <div data-v-ec12e293="" class="v-col v-col-3"><span data-v-ec12e293="" class="v-chip v-theme--light v-chip--density-comfortable v-chip--size-default v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-v-18"><!----><span class="v-chip__underlay"></span>
                                    <!---->
                                    <!---->
                                    <div class="v-chip__content" data-no-activator=""><b data-v-ec12e293="">default</b>
                                      <!---->
                                      <!--teleport start-->
                                      <!--teleport end-->
                                    </div>
                                    <!---->
                                    <!----></span>
                                  </div>
                                </div>
                              </div>
                              <!---->
                            </div>
                            <!---->
                            <!----><span class="v-card__underlay"></span>
                          </div>
                        </div>
                      </div>
                      <div data-v-ec12e293="" class="v-row mt-0 pt-0 pt-0" cols="12">
                        <div data-v-ec12e293="" class="v-col v-col-8 pr-0">
                          <!--v-if-->
                        </div>
                        <div data-v-ec12e293="" class="v-col v-col-4 d-flex flex-lg-column align-center justify-center pt-0"><button data-v-ec12e293="" type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" data-test="add-card-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><span class="v-btn__prepend"><i class="mdi-credit-card-plus mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span><span class="v-btn__content" data-no-activator="">Add new card</span>
                            <!---->
                            <!---->
                          </button></div>
                      </div>
                      <div data-v-ec12e293="" class="v-row">
                        <div data-v-ec12e293="" class="v-col">
                          <!--v-if-->
                        </div>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <div class="v-container v-locale--is-ltr">
                        <div class="v-row">
                          <div class="v-col">
                            <h2 data-test="title"> Payment Method: </h2>
                          </div>
                        </div>
                        <div class="v-row">
                          <div class="v-col">
                            <p data-test="sub-title"> This is the payment method you have selected for your ShellHub Cloud subscription </p>
                          </div>
                        </div>
                        <div class="v-col">
                          <div class="v-card v-theme--light v-card--density-default v-card--variant-flat bg-v-theme-card" align="center" data-test="card">
                            <!---->
                            <div class="v-card__loader">
                              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                                <!---->
                                <div class="v-progress-linear__background"></div>
                                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                                  <div class="v-progress-linear__indeterminate">
                                    <div class="v-progress-linear__indeterminate long"></div>
                                    <div class="v-progress-linear__indeterminate short"></div>
                                  </div>
                                </transition-stub>
                                <!---->
                              </div>
                            </div>
                            <!---->
                            <!---->
                            <div class="v-list-item v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text pl-0 pr-0">
                              <!----><span class="v-list-item__underlay"></span>
                              <!---->
                              <div class="v-list-item__content" data-no-activator="">
                                <!---->
                                <!---->
                                <div class="v-row align-center pa-0 pa-2" cols="12">
                                  <div class="v-col v-col-1"><i class="fa:fab fa-cc-visa mdi v-icon notranslate v-theme--light" style="font-size: 1.5rem; height: 1.5rem; width: 1.5rem;" aria-hidden="true" data-test="type-icon"></i></div>
                                  <div class="v-col v-col-3"><b>xxxxxxxxxxxx4242</b></div>
                                  <div class="v-col v-col-3">3/2029</div>
                                  <div class="v-col v-col-2"></div>
                                  <div class="v-col v-col-3"><span class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-v-21"><!----><span class="v-chip__underlay"></span>
                                    <!---->
                                    <!---->
                                    <div class="v-chip__content" data-no-activator=""><b>default</b>
                                      <!---->
                                      <!--teleport start-->
                                      <!--teleport end-->
                                    </div>
                                    <!---->
                                    <!----></span>
                                  </div>
                                </div>
                              </div>
                              <!---->
                            </div>
                            <!---->
                            <!----><span class="v-card__underlay"></span>
                          </div>
                        </div>
                        <div class="v-spacer mb-5"></div>
                        <div class="v-row">
                          <div class="v-col">
                            <h3 data-test="additional-information"> Additional Information: </h3>
                            <div class="v-spacer mb-2"></div>
                            <ul data-test="additional-information-list" class="text-justify">
                              <li>
                                <p>Your selected payment method will be charged automatically on a monthly basis</p>
                              </li>
                              <li>
                                <p>You can manage your payment methods, invoices and subscription details in the <strong>Billing Portal.</strong></p>
                              </li>
                              <li>
                                <p>Invoices will be generated and available for download at the beginning of each billing cycle.</p>
                              </li>
                              <li>
                                <p>You have the option to cancel your subscription at any time through the <strong>Billing Portal.</strong></p>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <!--v-if-->
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item v-window-item--active" style="">
                      <div class="content pa-4 pb-0 px-0" data-test="card-fourth-page">
                        <div class="v-container v-locale--is-ltr">
                          <div data-v-cf6d449b="" class="v-row">
                            <div data-v-cf6d449b="" class="v-col" align="center">
                              <div data-v-cf6d449b="" class="v-card-title" data-test="title"> Congratulations! Subscription Successful! </div>
                            </div>
                          </div>
                          <div data-v-cf6d449b="" class="v-row">
                            <div data-v-cf6d449b="" class="v-col" align="center"><i data-v-cf6d449b="" class="mdi-cloud-check-variant mdi v-icon notranslate v-theme--light text-green v-icon--end green-cloud" style="font-size: 100px; height: 100px; width: 100px;" aria-hidden="true" data-test="green-cloud-icon"></i>
                              <div data-v-cf6d449b="" class="v-spacer mt-4"></div>
                              <h4 data-v-cf6d449b="" data-test="h4-letter"> Thank you for choosing ShellHub Cloud! Your subscription has been successfully activated, and we're thrilled to have you on board. </h4>
                            </div>
                          </div>
                          <div data-v-cf6d449b="" class="v-row">
                            <div data-v-cf6d449b="" class="v-col">
                              <p data-v-cf6d449b="" data-test="p-letter"> You now have access to our powerful device management solution, allowing you to effortlessly connect, monitor, and control your devices from anywhere. </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
                <!---->
              </div>
            </div><!-- Footer -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-t px-6 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-spacer"></div>
                <!--v-if-->
                <!--v-if-->
                <!--v-if--><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="successful-close-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Close </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="v-overlay v-overlay--absolute v-theme--light v-locale--is-ltr v-tooltip" style="z-index: 2000;" id="v-tooltip-v-18" role="tooltip" data-v-ec12e293="">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade-transition" appear="true" persisted="true" css="true" target="[object HTMLSpanElement]">
        <div class="v-overlay__content" style="min-width: 0px; display: none;"> This payment method will be used on your subscription </div>
      </transition-stub>
    </div>
    <div class="v-overlay v-overlay--absolute v-theme--light v-locale--is-ltr v-tooltip" style="z-index: 2000;" id="v-tooltip-v-21" role="tooltip">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade-transition" appear="true" persisted="true" css="true" target="[object HTMLSpanElement]">
        <div class="v-overlay__content" style="min-width: 0px; display: none;"> This payment method will be used on your subscription </div>
      </transition-stub>
    </div>
  </div>
</body>"
`;

exports[`Billing Dialog > Renders the component (Welcome window) 1`] = `
"<body>
  <div class="v-overlay-container">
    <div class="v-overlay v-overlay--active v-theme--light v-locale--is-ltr v-dialog v-dialog--scrollable" style="z-index: 2400;" aria-modal="true" role="dialog" data-v-0e9a08b3="" data-test="checkout-dialog">
      <transition-stub name="fade-transition" appear="true" persisted="false" css="true">
        <div class="v-overlay__scrim"></div>
      </transition-stub>
      <transition-stub name="dialog-bottom-transition" appear="true" persisted="true" css="true">
        <div class="v-overlay__content" style="max-width: 600px;" tabindex="-1">
          <div data-v-0e9a08b3="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated bg-v-theme-surface border">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <!-- Content -->
            <!-- Titlebar -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-b px-4 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-avatar v-theme--light text-primary v-avatar--density-default v-avatar--rounded v-avatar--variant-tonal border border-primary border-opacity-100 mr-3" style="width: 48px; height: 48px;"><i class="mdi-credit-card mdi v-icon notranslate v-theme--light" style="font-size: 24px; height: 24px; width: 24px;" aria-hidden="true"></i>
                  <!----><span class="v-avatar__underlay"></span>
                </div>
                <div>
                  <div class="v-toolbar-title text-h6">
                    <div class="v-toolbar-title__placeholder">
                      <!---->Billing &amp; Subscription
                    </div>
                  </div>
                  <div class="text-caption text-medium-emphasis">Manage your subscription and payment details</div>
                </div>
                <div class="v-spacer"></div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="close-btn-toolbar"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header><!-- Content -->
            <div class="v-card-text pa-6">
              <div class="v-window v-theme--light">
                <div class="v-window__container">
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item v-window-item--active">
                      <div class="v-card-title mb-1 pt-0" align="center" data-test="title"> ShellHub Cloud Premium Subscription </div>
                      <div data-test="text" class="text-justify">
                        <p> Our hosted service helps you manage your devices, with costs based on your device count. It's perfect for easy, secure, and remote control, whatever your fleet size. </p>
                        <p>As your device number grows, our pricing adapts, guaranteeing value.</p>
                        <p>Click on next to proceed to the payment checkout.</p>
                      </div>
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <transition-stub name="v-window-x-transition" appear="false" persisted="false" css="true">
                    <div class="v-window-item" style="display: none;">
                      <!---->
                    </div>
                  </transition-stub>
                  <!---->
                </div>
                <!---->
              </div>
            </div><!-- Footer -->
            <header class="v-toolbar v-toolbar--collapse-start v-toolbar--density-default bg-primary v-theme--light v-locale--is-ltr bg-v-theme-surface border-t px-6 py-2">
              <!---->
              <div class="v-toolbar__content" style="height: 64px;">
                <!---->
                <!---->
                <div class="v-spacer"></div><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="payment-letter-close-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Close </span>
                  <!---->
                  <!---->
                </button><button type="button" class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text" data-test="payment-letter-next-button"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                  <!----><span class="v-btn__content" data-no-activator=""> Next </span>
                  <!---->
                  <!---->
                </button>
                <!--v-if-->
                <!--v-if-->
                <!--v-if-->
                <!---->
              </div>
              <transition-stub name="expand-transition" appear="false" persisted="false" css="true">
                <!---->
              </transition-stub>
            </header>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</body>"
`;
